add codemerge flags
Signed-off-by: mcczzz <547511415@qq.com>

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -1942,8 +1942,25 @@ if (use_oh_skia) {
         ldflags += [
           "-Wl,-mllvm,-vectorization-bonus-factor=4",
           "-Wl,-mllvm,-vectorizer-min-trip-count=4",
+          "-Wl,--aarch64-inline-plt",
           "-Wl,-mllvm,-tail-dup-profile-hot-percentile-override=999990",
         ]
+        if (skia_feature_enable_codemerge) {
+          ldflags += [
+            "-Wl,-plugin-opt=-split-machine-functions",
+            "-Wl,-mllvm",
+            "-Wl,-fixup-unconditional-branch-unsafely",
+            "-Wl,--no-create-thunks-introduced-by-mfs",
+            "-Wl,-mllvm",
+            "-Wl,-mfs-psi-cutoff=999500",
+            "-Wl,-z",
+            "-Wl,keep-text-section-prefix",
+            "-Wl,--symbol-ordering-file=" +
+                rebase_path("${skia_feature_pgo_path}/libskia_canvaskit.txt",
+                            root_build_dir),
+            "-Wl,--no-warn-symbol-ordering",
+          ]
+        }
       }
     }
   }
@@ -4425,7 +4442,24 @@ ohos_static_library("sksl_ext_static") {
         ldflags += [
           "-Wl,-mllvm,-vectorization-bonus-factor=4",
           "-Wl,-mllvm,-vectorizer-min-trip-count=4",
+          "-Wl,--aarch64-inline-plt",
         ]
+        if (skia_feature_enable_codemerge) {
+          ldflags += [
+            "-Wl,-plugin-opt=-split-machine-functions",
+            "-Wl,-mllvm",
+            "-Wl,-fixup-unconditional-branch-unsafely",
+            "-Wl,--no-create-thunks-introduced-by-mfs",
+            "-Wl,-mllvm",
+            "-Wl,-mfs-psi-cutoff=999500",
+            "-Wl,-z",
+            "-Wl,keep-text-section-prefix",
+            "-Wl,--symbol-ordering-file=" +
+                rebase_path("${skia_feature_pgo_path}/libskia_canvaskit.txt",
+                            root_build_dir),
+            "-Wl,--no-warn-symbol-ordering",
+          ]
+        }
       }
     }
   }
