--- a/m133/BUILD.gn
+++ b/m133/BUILD.gn
@@ -8,7 +8,7 @@ import("gn/fuchsia_defines.gni")
 import("gn/shared_sources.gni")
 import("gn/skia.gni")
 import("gn/toolchain/wasm.gni")
-
+import("modules/skottie/skottie.gni")
 if (defined(is_mingw) && is_mingw == true) {
   is_win = true
 }
@@ -2763,11 +2763,25 @@ if (skia_enable_tools) {
         ":skia",
         ":tool_utils",
         ":trace",
-        "modules/skparagraph",
-        "modules/skshaper",
         "modules/skunicode",
         "modules/svg",
       ]
+      if (gm_test_enable_font) {
+        deps += [
+          "modules/skparagraph",
+          "modules/skshaper",
+        ]
+      }
+      ldflags = [
+        "--stdlib=libc++",
+        "-lc++",
+      ]
+      if (is_ohos) {
+        sources += [ "${skia_root_dir}/src/ports/SkDebug_ohos.cpp" ]
+        sources += skia_skottie_sources
+        external_deps = [ "hilog:libhilog" ]
+        deps += [ "modules/sksg" ]
+      }
     }
   }
 
