--- a/gn/oh_skia.gni
+++ b/gn/oh_skia.gni
@@ -69,6 +69,8 @@ if (is_ohos && is_clang && (target_cpu == "arm" || target_cpu == "arm64")) {
         "-Wno-error=backend-plugin",
         "-Wno-profile-instr-out-of-date",
         "-Wno-profile-instr-unprofiled",
+        "-mllvm",
+        "-enable-partial-inlining",
       ]
     }
     if (skia_feature_product == "pc" && target_cpu == "arm64" &&
