--- a/m133/BUILD.gn
+++ b/m133/BUILD.gn
@@ -133,6 +133,9 @@ config("skia_public") {
       defines += [ "SK_VK_PARTIALRENDER" ]
     }
   }
+  if (ace_enable_skia_small_page_texture) {
+    defines += [ "SK_ENABLE_SMALL_PAGE" ]
+  }
 
   # Some older versions of the Clang toolchain change the visibility of
   # symbols decorated with API_AVAILABLE macro to be visible. Users of such
