字体宏定义优化
Signed-off-by: chenpeng <chenpeng299@huawei.com>

--- a/modules/skparagraph/BUILD.gn
+++ b/modules/skparagraph/BUILD.gn
@@ -115,7 +115,7 @@ ohos_static_library("skia_paragraph_ohos") {
   }
 
   if (current_os == "ohos") {
-    defines += [ "OHOS_TEXT_ENABLE" ]
+    defines += [ "ENABLE_OHOS_ENHANCE" ]
     external_deps += [
       "hitrace:hitrace_meter",
       "init:libbegetutil",
