skia vulkan支持局部刷新扩展
Signed-off-by: chx <liuchuanxiu@h-partners.com>
Change-Id: I157fbd01e5525c3f69f3015558641f0c9a6a4889

--- a/m133/BUILD.gn
+++ b/m133/BUILD.gn
@@ -1381,6 +1381,9 @@ optional("gpu") {
     if (is_android) {
       sources += skia_gpu_vk_android_private
     }
+    if (skia_vk_enable_partialrender) {
+      public_defines += [ "SK_VK_PARTIALRENDER" ]
+    }
   }
 
   if (skia_use_direct3d) {
