--- a/m133/gn/skia.gni
+++ b/m133/gn/skia.gni
@@ -149,6 +149,7 @@ declare_args() {
     }
   }
 
+  skia_vk_enable_partialrender = false
   skia_build_fuzzers = is_clang && is_linux && target_cpu == "x64"
   skia_use_libfuzzer_defaults = true
 
