previewer字体不同平台的适配
Signed-off-by: Amber <lvang3@huawei.com>
Change-Id: I363f382fc81c2210c8ee2b9a0f3659f5c7326e67

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -4558,6 +4558,7 @@ ohos_static_library("sksl_ext_static") {
       "${skia_root_dir}:crabbyavif",
       "${skia_root_dir}:heif",
       "${skia_root_dir}:hsw",
+      "${skia_root_dir}:fontmgr_factory",
       "${skia_root_dir}:jpeg_decode",
       "${skia_root_dir}:jpegxl_decode",
       "${skia_root_dir}:lasx",
