--- a/m133/BUILD.gn
+++ b/m133/BUILD.gn
@@ -2130,6 +2130,10 @@ skia_component("skia") {
 
   defines = []
   libs = []
+  
+  if (is_arkui_x) {
+      defines += [ "ARKUI_X_ENABLE" ]
+  }
 
   if (skia_build_for_debugger) {
     defines += [ "SK_BUILD_FOR_DEBUGGER" ]
