--- a/m133/BUILD.gn
+++ b/m133/BUILD.gn
@@ -118,6 +118,9 @@ config("skia_public") {
   if (skia_use_safe_libcxx) {
     defines += [ "_LIBCPP_ENABLE_ASSERTIONS=1" ]
   }
+  if (is_skia_dev_build && !is_wasm) {
+    defines += [ "GPU_TEST_UTILS=1" ]
+  }
 
   # Some older versions of the Clang toolchain change the visibility of
   # symbols decorated with API_AVAILABLE macro to be visible. Users of such
@@ -157,10 +160,7 @@ config("skia_private") {
     ]
   }
   if (is_skia_dev_build && !is_wasm) {
-    defines += [
-      "SK_ALLOW_STATIC_GLOBAL_INITIALIZERS=1",
-      "GPU_TEST_UTILS=1",
-    ]
+    defines += [ "SK_ALLOW_STATIC_GLOBAL_INITIALIZERS=1" ]
   }
   libs = []
   lib_dirs = []
@@ -1008,6 +1008,9 @@ optional("gpu_shared") {
     if (skia_use_vma) {
       sources += skia_vma_sources
       public_deps += [ "src/gpu/vk/vulkanmemoryallocator" ]
+    }
+    if (skia_vk_enable_partialrender) {
+      public_defines += [ "SK_VK_PARTIALRENDER" ]
     }
   }
 
