patch1 - ASTC纹理显示适配新版skia -pr1602
Signed-off-by: shenshiyi2 <shenshiyi2@h-partners.com>

--- a/m133/BUILD.gn
+++ b/m133/BUILD.gn
@@ -118,6 +118,9 @@ config("skia_public") {
   if (skia_use_safe_libcxx) {
     defines += [ "_LIBCPP_ENABLE_ASSERTIONS=1" ]
   }
+  if (ace_enable_skia_small_page_texture) {
+    defines += [ "SK_ENABLE_SMALL_PAGE" ]
+  }
 
   # Some older versions of the Clang toolchain change the visibility of
   # symbols decorated with API_AVAILABLE macro to be visible. Users of such
