--- a/modules/skparagraph/BUILD.gn
+++ b/modules/skparagraph/BUILD.gn
@@ -98,6 +98,8 @@ ohos_static_library("skia_paragraph_ohos") {
   }
 
   if (is_arkui_x) {
+    include_dirs = [ "//base/hiviewdfx/hitrace/interfaces/native/innerkits/include/hitrace_meter" ]
+    defines += [ "CROSS_PLATFORM" ]
     deps += [
       "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog_${target_os}",
       "//foundation/graphic/graphic_2d/rosen/modules/2d_graphics:2d_graphics",
