新增notdef字体文件
Signed-off-by: @ran-zhao-yu <ranzhaoyu1@huawei.com>

--- a/src/ports/skia_ohos/config/fontconfig_ohos.json
+++ b/src/ports/skia_ohos/config/fontconfig_ohos.json
@@ -892,6 +892,12 @@
       "lang": "zh-Hans",
       "family": "HYQiHei L3",
       "file": "HYQiHeiL3.ttf"
+    },
+    {
+      "type": 0,
+      "alias": "notdef",
+      "family": "HarmonyOS Sans Notdef",
+      "file": "HarmonyOS_Sans_Notdef.ttf"
     }
   ]
 }
