--- a/m133/BUILD.gn
+++ b/m133/BUILD.gn
@@ -83,6 +83,7 @@ config("skia_public") {
     "SK_CODEC_DECODES_WBMP",
     "ENABLE_TEXT_ENHANCE",
     "USE_M133_SKIA",
+    "TODO_M133_SKIA",
   ]
   cflags_objcc = []
   if (is_ohos && (target_cpu == "arm" || target_cpu == "arm64")) {
