--- a/m133/BUILD.gn
+++ b/m133/BUILD.gn
@@ -165,6 +165,10 @@ config("skia_public") {
     defines += [ "TURBO_JPEG_HUFF_DECODE_OPT" ]
     defines += [ "TURBO_PNG_MULTY_LINE_OPT" ]
   }
+
+  if (skia_vk_enable_partialrender) {
+    defines += [ "SK_VK_PARTIALRENDER" ]
+  }
 }
 
 # Skia internal APIs, used by Skia itself and a few test tools.
