--- a/BUILD.gn
+++ b/BUILD.gn
@@ -4425,6 +4425,10 @@ ohos_static_library("sksl_ext_static") {
   include_dirs = [ "." ]
 }
 } else { # skia_use_m133
+  if (defined(is_mingw) && is_mingw == true) {
+    is_win = true
+  }
+
   skia_component("skia") {
   }
   import("${skia_modules_dir}/skcms/skcms.gni")
@@ -4621,6 +4625,7 @@ ohos_static_library("sksl_ext_static") {
 
     defines = skia_common_defines
     cflags = skia_common_cflags
+    cflags += [ "-Wno-ignored-attributes" ]
 
     if (skia_build_for_debugger) {
       defines += [ "SK_BUILD_FOR_DEBUGGER" ]
@@ -4638,7 +4643,7 @@ ohos_static_library("sksl_ext_static") {
 
     if (is_win) {
       sources += skia_ports_windows_sources +[
-                  # "${skia_root_dir}/src/ports/SkDebug_win.cpp",
+                  "${skia_root_dir}/src/ports/SkDebug_win.cpp",
                   "${skia_root_dir}/src/ports/SkImageGeneratorWIC.cpp",
                 ]
       libs += [
