--- a/m133/gn/skia.gni
+++ b/m133/gn/skia.gni
@@ -211,7 +211,7 @@ declare_args() {
     skia_fontmgr_factory = ":fontmgr_win_factory"
   } else if ((is_mac || is_ios) && skia_use_fonthost_mac) {
     skia_fontmgr_factory = ":fontmgr_mac_ct_factory"
-  } else if (skia_enable_fontmgr_fontconfig) {
+  } else if (skia_enable_fontmgr_fontconfig && !use_oh_skia) {
     skia_fontmgr_factory = ":fontmgr_fontconfig_factory"
   } else if (skia_enable_fontmgr_custom_directory) {
     skia_fontmgr_factory = ":fontmgr_custom_directory_factory"
