--- a/BUILD.gn
+++ b/BUILD.gn
@@ -4858,4 +4858,160 @@ ohos_static_library("sksl_ext_static") {
     }
     include_dirs = [ "${skia_root_dir}" ]
   }
+  ohos_static_library("skia_canvaskit_static") {
+    part_name = "skia"
+    subsystem_name = "thirdparty"
+
+    public_configs = [
+      "${skia_root_dir}:skia_public",
+      ":skia_config",
+    ]
+    configs = skia_library_configs
+    deps = [
+      "${skia_root_dir}:fontmgr_FontConfigInterface",
+      "${skia_root_dir}:fontmgr_android",
+      "${skia_root_dir}:fontmgr_android_ndk",
+      "${skia_root_dir}:fontmgr_custom_directory",
+      "${skia_root_dir}:fontmgr_custom_embedded",
+      "${skia_root_dir}:fontmgr_custom_empty",
+      "${skia_root_dir}:fontmgr_fontations_empty",
+      "${skia_root_dir}:fontmgr_fontconfig",
+      "${skia_root_dir}:fontmgr_fuchsia",
+      "${skia_root_dir}:gpu",
+      "${skia_root_dir}:graphite",
+      "${skia_root_dir}:jpeg_encode",
+      "${skia_root_dir}:png_encode",
+      "${skia_root_dir}:webp_encode",
+      "${skia_root_dir}:xps",
+    ]
+    deps += [
+      "${skia_root_dir}:android_utils",
+      "${skia_root_dir}:avif",
+      "${skia_root_dir}:crabbyavif",
+      "${skia_root_dir}:heif",
+      "${skia_root_dir}:hsw",
+      "${skia_root_dir}:fontmgr_factory",
+      "${skia_root_dir}:jpeg_decode",
+      "${skia_root_dir}:jpegxl_decode",
+      "${skia_root_dir}:lasx",
+      "${skia_root_dir}:minify_sksl",
+      "${skia_root_dir}:ndk_images",
+      "${skia_root_dir}:png_decode_libpng",
+      "${skia_root_dir}:png_decode_rust",
+      "${skia_root_dir}:raw",
+      "${skia_root_dir}:skx",
+      "${skia_root_dir}:typeface_fontations",
+      "${skia_root_dir}:vello",
+      "${skia_root_dir}:webp_decode",
+      "${skia_root_dir}:wuffs",
+      "${skia_root_dir}:xml",
+      "${skia_modules_dir}/skcms",
+      "${skia_modules_dir}/svg",
+      "${skia_modules_dir}/skshaper",
+      "${skia_modules_dir}/skunicode",
+      "${skia_modules_dir}/skresources",
+    ]
+    public = skia_core_public
+    public += skia_codec_public
+    public += skia_utils_public
+    public += skia_effects_public
+    public += skia_effects_imagefilter_public
+
+    sources = []
+    sources += skia_core_sources
+    sources += skia_utils_private
+    sources += skia_utils_chromium
+    sources += skia_effects_sources
+    sources += skia_colorfilters_sources
+    sources += skia_effects_imagefilter_sources
+    sources += skia_codec_shared
+    sources += skia_codec_decode_bmp
+    sources += skia_encode_srcs
+    sources += skia_sksl_core_sources
+    sources += skia_sksl_core_module_sources
+    sources += skia_sksl_tracing_sources
+    sources += skia_ports_sources
+    sources += [
+      "${skia_root_dir}/src/android/SkAndroidFrameworkUtils.cpp",
+      "${skia_root_dir}/src/android/SkAnimatedImage.cpp",
+      "${skia_root_dir}/src/codec/SkAndroidCodec.cpp",
+      "${skia_root_dir}/src/codec/SkAndroidCodecAdapter.cpp",
+      "${skia_root_dir}/src/codec/SkSampledCodec.cpp",
+      "${skia_root_dir}/src/ports/SkDiscardableMemory_none.cpp",
+      "${skia_root_dir}/src/ports/SkMemory_malloc.cpp",
+      "${skia_root_dir}/src/sfnt/SkOTTable_name.cpp",
+      "${skia_root_dir}/src/sfnt/SkOTUtils.cpp",
+    ]
+
+    libs = []
+
+    defines = skia_common_defines
+    cflags = skia_common_cflags
+
+    if (skia_build_for_debugger) {
+      defines += [ "SK_BUILD_FOR_DEBUGGER" ]
+    }
+
+    if (skia_use_no_jpeg_encode) {
+      sources += skia_no_encode_jpeg_srcs
+    }
+    if (skia_use_no_png_encode) {
+      sources += skia_no_encode_png_srcs
+    }
+    if (skia_use_no_webp_encode) {
+      sources += skia_no_encode_webp_srcs
+    }
+
+    sources += [ "${skia_root_dir}/src/ports/SkOSFile_posix.cpp" ]
+    if (is_ios) {
+      sources += [ "${skia_root_dir}/src/ports/SkOSFile_ios.h" ]
+    }
+
+    if (is_ohos) {
+      external_deps = [
+        "bounds_checking_function:libsec_shared",
+      ]
+    }
+
+    if (is_android) {
+      deps += [ "${skia_third_party_dir}/expat" ]
+      if (defined(ndk) && ndk != "") {
+        deps += [ "${skia_third_party_dir}/cpu-features" ]
+      }
+      sources += [ "${skia_root_dir}/src/ports/SkDebug_android.cpp" ]
+      libs += [
+        "EGL",
+        "GLESv2",
+        "log",
+      ]
+    }
+
+    if (is_ios) {
+      public += [ "${skia_root_dir}/include/ports/SkCFObject.h" ]
+      sources += [
+        "${skia_root_dir}/src/ports/SkDebug_stdio.cpp",
+        "${skia_root_dir}/src/ports/SkImageGeneratorCG.cpp",
+      ]
+      frameworks = [
+        "CoreFoundation.framework",
+        "ImageIO.framework",
+        "MobileCoreServices.framework",
+      ]
+    }
+
+    if (skia_include_multiframe_procs) {
+      sources += [ "${skia_root_dir}/tools/SkSharingProc.cpp" ]
+    }
+
+    # Overrides TRACE_EVENT0..2 macros (etc) to map to Perfetto's tracing macros.
+    # Currently only supported in Android framework.
+    if (skia_android_framework_use_perfetto) {
+      defines += [ "SK_ANDROID_FRAMEWORK_USE_PERFETTO" ]
+      sources += [ "${skia_root_dir}/src/android/SkAndroidFrameworkPerfettoStaticStorage.cpp" ]
+    }
+
+    if (!skia_enable_ganesh && !skia_enable_graphite) {
+      sources += skia_no_slug_srcs
+    }
+  }
 }
