给mac平台添加打开m133开关后的jsoncpp依赖
Signed-off-by: AKAKX <xinyuyangakashi@outlook.com>
Change-Id: Id76a7d17de8f9529f4cc78963ebf3cbc5c331409

--- a/m133/BUILD.gn
+++ b/m133/BUILD.gn
@@ -726,6 +726,10 @@ optional("fontmgr_mac_ct") {
     ]
 
     defines = [ "SK_BUILD_FONT_MGR_FOR_PREVIEW_MAC" ]
+    external_deps = [ "jsoncpp:jsoncpp" ]
+    deps = [
+      ":fontmgr_symbol_load",
+    ]
   }
 
   if (is_mac) {
