--- a/m133/BUILD.gn
+++ b/m133/BUILD.gn
@@ -88,6 +88,9 @@ config("skia_public") {
     "USE_M133_SKIA",
     "TODO_M133_SKIA",
   ]
+  if (defined(skia_ohos_debug) && skia_ohos_debug) {
+    defines += [ "SKIA_OHOS_DEBUG" ]
+  }
   cflags_objcc = []
   if (is_ohos && (target_cpu == "arm" || target_cpu == "arm64")) {
     defines += [
