--- a/m133/gn/skia.gni
+++ b/m133/gn/skia.gni
@@ -99,6 +99,7 @@ declare_args() {
   skia_enable_gpu = true
   skia_enable_graphite = false
   skia_use_zlib = true
+  skia_ohos_debug = false
   skia_enable_standard_fonts = true
 
   if (is_ios) {
